supriti Ma'am updates

--- a/valis_run_supriti.ipynb
+++ b/valis_run_supriti.ipynb
@@ -12755,6 +12755,38 @@
       "NoneType: None\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/src/valis/valtils.py:25: UserWarning: Need at least 4 keypoints for RANSAC filtering, but only have 3\n",
+      "  warnings.warn(warning_msg, warning_type)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NoneType: None\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/src/valis/valtils.py:25: UserWarning: Need at least 4 keypoints for RANSAC filtering, but only have 2\n",
+      "  warnings.warn(warning_msg, warning_type)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NoneType: None\n",
+      "\n"
+     ]
     }
    ],
    "source": [
