--- a/nn_rf.ipynb
+++ b/nn_rf.ipynb
@@ -207,12 +207,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BFIWReg:\n",
-    "    def __init__(self, src_dir, dest_dir, ref_idx, step=10) -> None:\n",
+    "    def __init__(self, src_dir, dest_dir, ref_idx, step=10, max_idx=400) -> None:\n",
     "        self.src_dir = src_dir\n",
     "        self.dest_dir = dest_dir\n",
     "        imgs = os.listdir(self.src_dir)\n",
@@ -230,7 +230,7 @@
     "        if ref_idx not in self.imgs:\n",
     "            raise ValueError(\"Reference index not found in the image list\")\n",
     "        # self.ref_slide = BFIWSlide(self.imgs[ref_idx], key=ref_idx, is_ref=True)\n",
-    "        self.img_items = list(self.imgs.items())[::step]\n",
+    "        self.img_items = list(self.imgs.items())[:max_idx][::step]\n",
     "        if ref_idx not in dict(self.img_items):\n",
     "            self.img_items.append((ref_idx, self.imgs[ref_idx]))\n",
     "        self.slides_ = Parallel(n_jobs=32)(\n",
@@ -281,14 +281,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 133/133 [00:47<00:00,  2.78it/s]\n"
+      "  0%|          | 0/401 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 401/401 [02:45<00:00,  2.42it/s]\n"
      ]
     },
     {
@@ -302,7 +309,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 133/133 [00:48<00:00,  2.77it/s]\n"
+      "100%|██████████| 401/401 [02:16<00:00,  2.94it/s]\n"
      ]
     },
     {
@@ -316,7 +323,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 133/133 [00:00<00:00, 123280.10it/s]\n"
+      "100%|██████████| 401/401 [00:00<00:00, 15401.03it/s]\n"
      ]
     },
     {
@@ -330,18 +337,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 133/133 [00:00<00:00, 153.91it/s]\n"
+      "100%|██████████| 401/401 [00:02<00:00, 187.77it/s]\n"
      ]
     }
    ],
    "source": [
-    "reg = BFIWReg('/storage/valis_reg/BFIW_original/', '/storage/valis_reg/train_block_out', '1606', step=20)\n",
+    "reg = BFIWReg('/storage/valis_reg/BFIW_original/', '/storage/valis_reg/train_block_out', '1606', step=1, max_idx=400)\n",
     "# reg.save_output()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -355,14 +362,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/133 [00:00<?, ?it/s]"
+      "  0%|          | 0/401 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 133/133 [00:04<00:00, 29.80it/s]\n"
+      "100%|██████████| 401/401 [00:12<00:00, 32.32it/s]\n"
      ]
     }
    ],
@@ -372,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,14 +411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 133/133 [00:23<00:00,  5.60it/s]\n"
+      "100%|██████████| 300/300 [00:51<00:00,  5.81it/s]\n"
      ]
     }
    ],
@@ -423,11 +430,13 @@
     "slide_masks = []\n",
     "keys = []\n",
     "count = 0\n",
-    "for k, slide in tqdm(reg.slides.items()):\n",
-    "    if count > 10:\n",
-    "        break\n",
-    "    if k== '1606' or k =='1588':\n",
-    "        continue\n",
+    "reg.slides = dict(sorted(reg.slides.items()))\n",
+    "all_reg_slides = list(reg.slides.items())[:300]\n",
+    "for k, slide in tqdm(all_reg_slides):\n",
+    "    # if count > 10:\n",
+    "    #     break\n",
+    "    # if k== '1606' or k =='1588':\n",
+    "    #     continue\n",
     "    tissue_trans = transform_img(slide.msr_img)\n",
     "    train_images.append(slide.msr_img)\n",
     "    label_masks.append(tissue_trans['mask'])\n",
@@ -449,14 +458,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 132/132 [00:02<00:00, 55.89it/s]\n"
+      "100%|██████████| 300/300 [00:02<00:00, 117.91it/s]\n"
      ]
     }
    ],
@@ -469,52 +478,7 @@
     "for idx in trange(len(train_images)):\n",
     "    file_name = os.path.join(temp_dir, f\"ground_truth/{keys[idx]}.jpg\")\n",
     "    tmp_img = cv2.bitwise_and(train_images[idx], train_images[idx], mask=label_masks[idx])\n",
-    "    cv2.imwrite(file_name, cv2.cvtColor(tmp_img[::2,::2,:], cv2.COLOR_RGB2BGR))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bad_data =[\n",
-    "    887,\n",
-    "    1887,\n",
-    "    2650,\n",
-    "    1747,\n",
-    "    967,\n",
-    "    1027,\n",
-    "    2610,\n",
-    "    1687,\n",
-    "    1707,\n",
-    "    1627,\n",
-    "    1107,\n",
-    "    2590,\n",
-    "    1147,\n",
-    "    607,\n",
-    "    1467,\n",
-    "    1547,\n",
-    "    1207,\n",
-    "    1047,\n",
-    "    1007,\n",
-    "    1867,\n",
-    "    1327,\n",
-    "    1567,\n",
-    "    1447,\n",
-    "    207,\n",
-    "    1167,\n",
-    "    2630,\n",
-    "    1127,\n",
-    "    1187,\n",
-    "    1767,\n",
-    "    2,\n",
-    "    1087,\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "]"
+    "    cv2.imwrite(file_name, cv2.cvtColor(tmp_img[::4,::4,:], cv2.COLOR_RGB2BGR))\n"
    ]
   },
   {
@@ -526,14 +490,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('log.txt', 'r') as f:\n",
+    "    lines = f.readlines()\n",
+    "    bad_keys = [line.split('.')[0] for line in lines]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 32/32 [00:09<00:00,  3.33it/s]\n"
+      " 21%|██▏       | 64/300 [00:00<00:00, 358.55it/s]\n"
      ]
     }
    ],
@@ -546,9 +521,23 @@
     "from sklearn.metrics import balanced_accuracy_score, f1_score\n",
     "\n",
     "\n",
+    "def neighbourhood_values(image, coords):\n",
+    "    n_coords = coords - np.array([0, 1])\n",
+    "    s_coords = coords + np.array([0, 1])\n",
+    "    e_coords = coords + np.array([1, 0])\n",
+    "    w_coords = coords - np.array([1, 0])\n",
+    "    n_pixel = image[n_coords[:,0], n_coords[:,1]]\n",
+    "    s_pixel = image[s_coords[:,0], s_coords[:,1]]\n",
+    "    e_pixel = image[e_coords[:,0], e_coords[:,1]]\n",
+    "    w_pixel = image[w_coords[:,0], w_coords[:,1]]\n",
+    "    return np.c_[n_pixel, s_pixel, e_pixel, w_pixel]\n",
+    "\n",
+    "\n",
     "X = np.array([])\n",
     "y = np.array([])\n",
     "for i in trange(len(train_images)):\n",
+    "    if bad_keys[i] in keys:\n",
+    "        continue\n",
     "    image = train_images[i]\n",
     "    mask = label_masks[i]\n",
     "    slide_mask = slide_masks[i]\n",
@@ -556,21 +545,46 @@
     "    bg_mask = (act_mask==1).astype(np.uint8)\n",
     "    tissue_mask = (act_mask==2).astype(np.uint8)\n",
     "    img_center = np.array([image.shape[0]//2, image.shape[1]//2])\n",
-    "    # bg_mask = bg_mask - mask\n",
     "    tissue_coords = np.argwhere(tissue_mask)\n",
+    "    # bg_mask = bg_mask - mask\n",
     "    # tissue_coords = tissue_coords/(np.linalg.norm(tissue_coords- img_center, axis=1).reshape(-1, 1)+1e-5)\n",
-    "    tissue_coords = tissue_coords-img_center\n",
-    "    bg_coords = np.argwhere(bg_mask)\n",
     "    # bg_coords = bg_coords/(np.linalg.norm(bg_coords- img_center, axis=1).reshape(-1, 1)+1e-5)\n",
+    "    bg_coords = np.argwhere(bg_mask)\n",
+    "    # Neighbourhood Features for Tissue pixel north, south, east, west\n",
+    "    tissue_neighbourhood = neighbourhood_values(image, tissue_coords)\n",
+    "    bg_neighbourhood = neighbourhood_values(image, bg_coords)\n",
     "    bg_coords = bg_coords-img_center\n",
-    "    tX_ = np.c_[image[mask==1], tissue_coords]\n",
-    "    bgX_ = np.c_[image[bg_mask==1], bg_coords][::4]\n",
+    "    tissue_coords = tissue_coords-img_center\n",
+    "    tX_ = np.c_[image[tissue_mask==1], tissue_neighbourhood, tissue_coords]\n",
+    "    # tX_ = np.c_[image[mask==1], tissue_coords]\n",
+    "    bgX_ = np.c_[image[bg_mask==1],bg_neighbourhood, bg_coords][::4]\n",
     "    ty_ = np.ones(tissue_coords.shape[0])\n",
     "    by_ = np.zeros(bg_coords.shape[0])[::4]\n",
     "    X_ = np.concatenate([tX_, bgX_], axis=0)\n",
     "    y_ = np.concatenate([ty_, by_], axis=0)\n",
     "    X = np.concatenate([X, X_], axis=0) if X.size else X_\n",
-    "    y = np.concatenate([y, y_], axis=0) if y.size else y_"
+    "    y = np.concatenate([y, y_], axis=0) if y.size else y_\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "359902"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tX_)"
    ]
   },
   {
