--- a/nn_rf.ipynb
+++ b/nn_rf.ipynb
@@ -207,12 +207,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "class BFIWReg:\n",
-    "    def __init__(self, src_dir, dest_dir, ref_idx, step=10, max_idx=400) -> None:\n",
+    "    def __init__(self, src_dir, dest_dir, ref_idx, step=10, continous_until=200, continous_step=2, max_idx=2600) -> None:\n",
     "        self.src_dir = src_dir\n",
     "        self.dest_dir = dest_dir\n",
     "        imgs = os.listdir(self.src_dir)\n",
@@ -230,7 +230,12 @@
     "        if ref_idx not in self.imgs:\n",
     "            raise ValueError(\"Reference index not found in the image list\")\n",
     "        # self.ref_slide = BFIWSlide(self.imgs[ref_idx], key=ref_idx, is_ref=True)\n",
-    "        self.img_items = list(self.imgs.items())[:max_idx][::step]\n",
+    "        self.img_items = list(self.imgs.items())\n",
+    "        self.img_items_continuous = [(k[0], k[1]) for k in self.img_items if int(k[0])<=continous_until]\n",
+    "        self.img_items_continuous = self.img_items_continuous[::continous_step]\n",
+    "        self.img_items_remaining = [(k[0], k[1]) for k in self.img_items if (int(k[0])>continous_until) and (int(k[0])<=max_idx)]\n",
+    "        self.img_items_remaining = self.img_items_remaining[::step]\n",
+    "        self.img_items = self.img_items_continuous + self.img_items_remaining\n",
     "        if ref_idx not in dict(self.img_items):\n",
     "            self.img_items.append((ref_idx, self.imgs[ref_idx]))\n",
     "        self.slides_ = Parallel(n_jobs=32)(\n",
@@ -281,21 +286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/401 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 401/401 [02:45<00:00,  2.42it/s]\n"
+      "100%|██████████| 328/328 [02:01<00:00,  2.70it/s]\n"
      ]
     },
     {
@@ -309,7 +307,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 401/401 [02:16<00:00,  2.94it/s]\n"
+      "100%|██████████| 328/328 [01:54<00:00,  2.87it/s]\n"
      ]
     },
     {
@@ -323,7 +321,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 401/401 [00:00<00:00, 15401.03it/s]\n"
+      "100%|██████████| 328/328 [00:00<00:00, 265687.85it/s]\n"
      ]
     },
     {
@@ -337,18 +335,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 401/401 [00:02<00:00, 187.77it/s]\n"
+      "100%|██████████| 328/328 [00:01<00:00, 179.26it/s]\n"
      ]
     }
    ],
    "source": [
-    "reg = BFIWReg('/storage/valis_reg/BFIW_original/', '/storage/valis_reg/train_block_out', '1606', step=1, max_idx=400)\n",
+    "reg = BFIWReg('/storage/valis_reg/BFIW_original/', '/storage/valis_reg/train_block_out', '1606')\n",
     "# reg.save_output()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(reg.slides.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -362,14 +369,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/401 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 401/401 [00:12<00:00, 32.32it/s]\n"
+      "100%|██████████| 328/328 [00:11<00:00, 29.79it/s]\n"
      ]
     }
    ],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,14 +411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [00:51<00:00,  5.81it/s]\n"
+      "100%|██████████| 328/328 [00:58<00:00,  5.62it/s]\n"
      ]
     }
    ],
@@ -431,7 +431,7 @@
     "keys = []\n",
     "count = 0\n",
     "reg.slides = dict(sorted(reg.slides.items()))\n",
-    "all_reg_slides = list(reg.slides.items())[:300]\n",
+    "all_reg_slides = list(reg.slides.items())\n",
     "for k, slide in tqdm(all_reg_slides):\n",
     "    # if count > 10:\n",
     "    #     break\n",
@@ -458,14 +458,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 300/300 [00:02<00:00, 117.91it/s]\n"
+      "100%|██████████| 328/328 [00:03<00:00, 99.47it/s] \n"
      ]
     }
    ],
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,14 +501,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 21%|██▏       | 64/300 [00:00<00:00, 358.55it/s]\n"
+      "100%|██████████| 328/328 [32:01<00:00,  5.86s/it]\n"
      ]
     }
    ],
@@ -532,13 +532,16 @@
     "    w_pixel = image[w_coords[:,0], w_coords[:,1]]\n",
     "    return np.c_[n_pixel, s_pixel, e_pixel, w_pixel]\n",
     "\n",
+    "top, bottom, left, right = 1, 1, 1, 1  # Example padding values\n",
+    "border_type = cv2.BORDER_CONSTANT # type: ignore\n",
     "\n",
     "X = np.array([])\n",
     "y = np.array([])\n",
     "for i in trange(len(train_images)):\n",
-    "    if bad_keys[i] in keys:\n",
+    "    if keys[i] in bad_keys:\n",
     "        continue\n",
     "    image = train_images[i]\n",
+    "    image_p = cv2.copyMakeBorder(image, top, bottom, left, right, border_type)  # type: ignore\n",
     "    mask = label_masks[i]\n",
     "    slide_mask = slide_masks[i]\n",
     "    act_mask = mask+slide_mask\n",
@@ -551,8 +554,8 @@
     "    # bg_coords = bg_coords/(np.linalg.norm(bg_coords- img_center, axis=1).reshape(-1, 1)+1e-5)\n",
     "    bg_coords = np.argwhere(bg_mask)\n",
     "    # Neighbourhood Features for Tissue pixel north, south, east, west\n",
-    "    tissue_neighbourhood = neighbourhood_values(image, tissue_coords)\n",
-    "    bg_neighbourhood = neighbourhood_values(image, bg_coords)\n",
+    "    tissue_neighbourhood = neighbourhood_values(image_p, tissue_coords)\n",
+    "    bg_neighbourhood = neighbourhood_values(image_p, bg_coords)\n",
     "    bg_coords = bg_coords-img_center\n",
     "    tissue_coords = tissue_coords-img_center\n",
     "    tX_ = np.c_[image[tissue_mask==1], tissue_neighbourhood, tissue_coords]\n",
@@ -563,28 +566,18 @@
     "    X_ = np.concatenate([tX_, bgX_], axis=0)\n",
     "    y_ = np.concatenate([ty_, by_], axis=0)\n",
     "    X = np.concatenate([X, X_], axis=0) if X.size else X_\n",
-    "    y = np.concatenate([y, y_], axis=0) if y.size else y_\n",
-    "    break"
+    "    y = np.concatenate([y, y_], axis=0) if y.size else y_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "359902"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(tX_)"
+    "with open('log.txt', 'r') as f:\n",
+    "    aselected_files = f.read().splitlines()\n",
+    "aselected_files"
    ]
   },
   {
@@ -596,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,6 +603,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "207274201"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -618,9 +631,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "std::bad_alloc: out_of_memory: CUDA error at: /usr/include/rmm/mr/device/cuda_memory_resource.hpp:69: cudaErrorMemoryAllocation out of memory",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[77], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcuml\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mensemble\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RandomForestClassifier \u001b[38;5;28;01mas\u001b[39;00m cuRF\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcuml\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split \u001b[38;5;28;01mas\u001b[39;00m cu_train_test_split\n\u001b[0;32m----> 4\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m \u001b[43mcu_train_test_split\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtest_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshuffle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43mstratify\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43my\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m X_test_, X_val, y_test_, y_val \u001b[38;5;241m=\u001b[39m cu_train_test_split(X_test, y_test, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.3\u001b[39m, shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,stratify\u001b[38;5;241m=\u001b[39my_test)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/cuml/model_selection/_split.py:462\u001b[0m, in \u001b[0;36mtrain_test_split\u001b[0;34m(X, y, test_size, train_size, shuffle, random_state, stratify)\u001b[0m\n\u001b[1;32m    459\u001b[0m         \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(stratify, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__cuda_array_interface__\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    460\u001b[0m             stratify \u001b[38;5;241m=\u001b[39m cp\u001b[38;5;241m.\u001b[39masarray(stratify)[idxs]\n\u001b[0;32m--> 462\u001b[0m         split_return \u001b[38;5;241m=\u001b[39m \u001b[43m_stratify_split\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    463\u001b[0m \u001b[43m            \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    464\u001b[0m \u001b[43m            \u001b[49m\u001b[43mstratify\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    465\u001b[0m \u001b[43m            \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    466\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtrain_size\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    467\u001b[0m \u001b[43m            \u001b[49m\u001b[43mtest_size\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    468\u001b[0m \u001b[43m            \u001b[49m\u001b[43mx_numba\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    469\u001b[0m \u001b[43m            \u001b[49m\u001b[43my_numba\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    470\u001b[0m \u001b[43m            \u001b[49m\u001b[43mrandom_state\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    471\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    472\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m split_return\n\u001b[1;32m    474\u001b[0m \u001b[38;5;66;03m# If not stratified, perform train_test_split splicing\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/cuml/model_selection/_split.py:145\u001b[0m, in \u001b[0;36m_stratify_split\u001b[0;34m(X, stratify, labels, n_train, n_test, x_numba, y_numba, random_state)\u001b[0m\n\u001b[1;32m    137\u001b[0m y_test_i \u001b[38;5;241m=\u001b[39m cp\u001b[38;5;241m.\u001b[39marray(\n\u001b[1;32m    138\u001b[0m     labels[perm_indices_class_i[n_i[i] : n_i[i] \u001b[38;5;241m+\u001b[39m t_i[i]]],\n\u001b[1;32m    139\u001b[0m     order\u001b[38;5;241m=\u001b[39mlabels_order,\n\u001b[1;32m    140\u001b[0m )\n\u001b[1;32m    141\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(X, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__cuda_array_interface__\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\n\u001b[1;32m    142\u001b[0m     X, cupyx\u001b[38;5;241m.\u001b[39mscipy\u001b[38;5;241m.\u001b[39msparse\u001b[38;5;241m.\u001b[39mcsr_matrix\n\u001b[1;32m    143\u001b[0m ):\n\u001b[1;32m    144\u001b[0m     X_train_i \u001b[38;5;241m=\u001b[39m cp\u001b[38;5;241m.\u001b[39marray(\n\u001b[0;32m--> 145\u001b[0m         \u001b[43mX\u001b[49m\u001b[43m[\u001b[49m\u001b[43mperm_indices_class_i\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_i\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m, order\u001b[38;5;241m=\u001b[39mx_order\n\u001b[1;32m    146\u001b[0m     )\n\u001b[1;32m    147\u001b[0m     X_test_i \u001b[38;5;241m=\u001b[39m cp\u001b[38;5;241m.\u001b[39marray(\n\u001b[1;32m    148\u001b[0m         X[perm_indices_class_i[n_i[i] : n_i[i] \u001b[38;5;241m+\u001b[39m t_i[i]]],\n\u001b[1;32m    149\u001b[0m         order\u001b[38;5;241m=\u001b[39mx_order,\n\u001b[1;32m    150\u001b[0m     )\n\u001b[1;32m    152\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m X_train \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "File \u001b[0;32mcupy/_core/core.pyx:1521\u001b[0m, in \u001b[0;36mcupy._core.core._ndarray_base.__getitem__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy/_core/_routines_indexing.pyx:42\u001b[0m, in \u001b[0;36mcupy._core._routines_indexing._ndarray_getitem\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy/_core/core.pyx:829\u001b[0m, in \u001b[0;36mcupy._core.core._ndarray_base.take\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy/_core/_routines_indexing.pyx:131\u001b[0m, in \u001b[0;36mcupy._core._routines_indexing._ndarray_take\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy/_core/_routines_indexing.pyx:815\u001b[0m, in \u001b[0;36mcupy._core._routines_indexing._take\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy/_core/core.pyx:132\u001b[0m, in \u001b[0;36mcupy._core.core.ndarray.__new__\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy/_core/core.pyx:220\u001b[0m, in \u001b[0;36mcupy._core.core._ndarray_base._init\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mcupy/cuda/memory.pyx:738\u001b[0m, in \u001b[0;36mcupy.cuda.memory.alloc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/rmm/allocators/cupy.py:37\u001b[0m, in \u001b[0;36mrmm_cupy_allocator\u001b[0;34m(nbytes)\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mModuleNotFoundError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo module named \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcupy\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     36\u001b[0m stream \u001b[38;5;241m=\u001b[39m Stream(obj\u001b[38;5;241m=\u001b[39mcupy\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mget_current_stream())\n\u001b[0;32m---> 37\u001b[0m buf \u001b[38;5;241m=\u001b[39m \u001b[43mlibrmm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdevice_buffer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDeviceBuffer\u001b[49m\u001b[43m(\u001b[49m\u001b[43msize\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnbytes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstream\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mstream\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     38\u001b[0m dev_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m buf\u001b[38;5;241m.\u001b[39mptr \u001b[38;5;28;01melse\u001b[39;00m cupy\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mdevice\u001b[38;5;241m.\u001b[39mget_device_id()\n\u001b[1;32m     39\u001b[0m mem \u001b[38;5;241m=\u001b[39m cupy\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mUnownedMemory(\n\u001b[1;32m     40\u001b[0m     ptr\u001b[38;5;241m=\u001b[39mbuf\u001b[38;5;241m.\u001b[39mptr, size\u001b[38;5;241m=\u001b[39mbuf\u001b[38;5;241m.\u001b[39msize, owner\u001b[38;5;241m=\u001b[39mbuf, device_id\u001b[38;5;241m=\u001b[39mdev_id\n\u001b[1;32m     41\u001b[0m )\n",
+      "File \u001b[0;32mdevice_buffer.pyx:85\u001b[0m, in \u001b[0;36mrmm._lib.device_buffer.DeviceBuffer.__cinit__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mMemoryError\u001b[0m: std::bad_alloc: out_of_memory: CUDA error at: /usr/include/rmm/mr/device/cuda_memory_resource.hpp:69: cudaErrorMemoryAllocation out of memory"
+     ]
+    }
+   ],
    "source": [
     "from cuml.ensemble import RandomForestClassifier as cuRF\n",
     "from cuml.model_selection import train_test_split as cu_train_test_split\n",
