--- a/nn_rf.ipynb
+++ b/nn_rf.ipynb
@@ -355,6 +355,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -945,22 +952,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 227,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 222,
    "metadata": {},
    "outputs": [],
@@ -1175,7 +1166,7 @@
     "        os.path.join(\"/storage/valis_reg/rf_trained_pred/retinex\", retinex_frames[idx])\n",
     "    )\n",
     "    original_frame = pad_img_to_ref(original_frame, ref_frame)\n",
-    "    retinex_frame = pad_img_to_ref(retinex_frame, ref_frame)dc                                                                                                                                                                                                                                                                                  \n",
+    "    retinex_frame = pad_img_to_ref(retinex_frame, ref_frame)                                                                                                                                                                                                                                                                                  \n",
     "    original_frame = extract_img_from_ref_mask(original_frame, ref_mask_v)\n",
     "    retinex_frame = extract_img_from_ref_mask(retinex_frame, ref_mask_v)\n",
     "    return {idx:{\"original\": original_frame, \"retinex\": retinex_frame}}"
@@ -1338,7 +1329,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cucim\n",
+    "\n",
+    "cucim.skimage.feature.multiscale_basic_features()"
+   ]
   }
  ],
  "metadata": {
