--- a/213_align.ipynb
+++ b/213_align.ipynb
@@ -47,6 +47,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Padding Them with the largest R, & C"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 127,
    "metadata": {},
@@ -430,7 +437,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "cannot pickle 'SwigPyObject' object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[190], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpickle\u001b[39;00m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00moutput_dir\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/registration_method.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m----> 4\u001b[0m     \u001b[43mpickle\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdump\u001b[49m\u001b[43m(\u001b[49m\u001b[43mregistration_method\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: cannot pickle 'SwigPyObject' object"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle \n",
+    "\n",
+    "with open(f'{output_dir}/registration_method.pkl', 'wb') as f:\n",
+    "    pickle.dump(registration_method, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,58 +535,6 @@
     "    print(f\"Saved registered volume to {volume_output_path}\")\n",
     "else:\n",
     "    print(\"Images are not 2D. Skipping volume construction.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2621"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_centers_comp = rectangle_centers[:16].tolist() + new_centers + rectangle_centers[-15:].tolist()\n",
-    "len(new_centers_comp)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_centers = [rectangle_centers[0].tolist()] + new_centers + [rectangle_centers[-1].tolist()]\n",
-    "new_centers = np.array(new_centers).astype(np.int32)\n",
-    "# translation_matrix = np.float32([[1, 0, tx], [0, 1, ty]])\n",
-    "translation_vectors = rectangle_centers - new_centers\n",
-    "translation_matrix = []\n",
-    "for idx, (x,y) in enumerate(translation_vectors):\n",
-    "    translation_matrix.append([[1, 0, x], [0, 1, y]])\n",
-    "translation_matrix = np.array(translation_matrix).astype(np.float32)\n",
-    "\n",
-    "# Apply translation to images\n",
-    "registered_retinex = []\n",
-    "i=0\n",
-    "for idx, img_ in tqdm(enumerate(retinex_imgs_thresh)):\n",
-    "    img = img_.copy()\n",
-    "    if idx in discard_idx:\n",
-    "        registered_retinex.append(img)\n",
-    "        i+=1\n",
-    "    registered_retinex.append(cv2.warpAffine(img, translation_matrix[idx-i], (img.shape[1], img.shape[0]), borderValue=255) )\n",
-    "\n",
-    "\n",
-    "os.makedirs('registered_retinex_213', exist_ok=True)\n",
-    "for idx, img in tqdm(enumerate(registered_retinex)):\n",
-    "    cv2.imwrite(f'registered_retinex_213/{idx}.png', img)"
    ]
   }
  ],
