--- a/bfiw_244.ipynb
+++ b/bfiw_244.ipynb
@@ -318,10 +318,10 @@
     "img_bfi = bfi['1202']\n",
     "\n",
     "fig, ax = plt.subplots(1, 2, figsize=(20, 20))\n",
-    "ax[0].imshow(img_bfiw)\n",
+    "ax[0].imshow(img_bfiw[:,:,0], cmap='gray')\n",
     "ax[0].axis('off')\n",
     "ax[0].set_title('BFIW')\n",
-    "ax[1].imshow(img_bfi)\n",
+    "ax[1].imshow(img_bfi[:,:,0], cmap='gray')\n",
     "ax[1].axis('off')\n",
     "ax[1].set_title('BFI')\n",
     "\n",
