--- a/bfiw_244.ipynb
+++ b/bfiw_244.ipynb
@@ -177,7 +177,10 @@
     "tipping_point = threshold_multiotsu(bfi_mask10, classes=3)[-1]\n",
     "bfi_mask10[bfi_mask10 > tipping_point] = 255\n",
     "bfi_mask10[bfi_mask10 <= tipping_point] = 0\n",
-    "_, bfi_mask10 = cv2.threshold(bfi_1_inv, 0, 255, cv2.THRESH_BINARY)\n",
+    "_, bfi_mask10 = cv2.threshold(bfi_1_inv, 0, 255you may want to use -f option)\n",
+    "\n",
+    "(base) hbpdev@hbpdev-imgseg:~/Downloads/keyd$ \n",
+    ", cv2.THRESH_BINARY)\n",
     "# plt.imshow(bfi_mask10, cmap='gray')\n",
     "# plt.imshow(bfi_2_inv, cmap='gray')\n",
     "# Multi-Otsu thresholding\n",
@@ -752,7 +755,7 @@
     "blank = np.zeros_like(img_bfi)\n",
     "cv2.drawContours(blank, contours, -1, (255, 255, 255), 1)\n",
     "plt.imshow(img_bfi[:,:,0], cmap='gray')\n",
-    "# CLAHE (Contrast Limited Adaptive Histogram Equalization)  \n",
+    "# CLAHE (Contrakst Limited Adaptive Histogram Equalization)  \n",
     "clahe = cv2.createCLAHE(clipLimit=2.0, tileGridSize=(8, 8))\n",
     "img_bfi_clahe = clahe.apply(img_bfi[:,:,2].copy())\n",
     "# plt.imshow(img_bfi_clahe, cmap='gray')\n",
