--- a/213_align.ipynb
+++ b/213_align.ipynb
@@ -378,7 +378,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Initialize the registration method\n",
     "registration_method = sitk.ImageRegistrationMethod()\n",
     "\n",
@@ -422,10 +421,7 @@
     "        previous_parameters = transforms[-1].GetParameters()\n",
     "        current_parameters = final_transform.GetParameters()\n",
     "        if len(transforms[-1].GetParameters()) ==0 :\n",
-    "            previous_paramimport pickle \n",
-    "\n",
-    "with open(f'{output_dir}/transforms.pkl', 'wb') as f:\n",
-    "    pickle.dump(transforms, f)eters = (0,0)\n",
+    "            previous_parameters = (0,0)\n",
     "        cumulative_parameters = [p + c for p, c in zip(previous_parameters, current_parameters)]\n",
     "        # Create a new translation transform with the cumulative parameters\n",
     "        cumulative_transform = sitk.TranslationTransform(fixed_image.GetDimension())\n",
@@ -435,7 +431,7 @@
     "        print(f'Error in slide {i}')\n",
     "        transforms.append(transforms[-1])\n",
     "        continue\n",
-    "    fixed_image = moving_image\n"
+    "    fixed_image = moving_image"
    ]
   },
   {
