--- a/213_align.ipynb
+++ b/213_align.ipynb
@@ -422,7 +422,10 @@
     "        previous_parameters = transforms[-1].GetParameters()\n",
     "        current_parameters = final_transform.GetParameters()\n",
     "        if len(transforms[-1].GetParameters()) ==0 :\n",
-    "            previous_parameters = (0,0)\n",
+    "            previous_paramimport pickle \n",
+    "\n",
+    "with open(f'{output_dir}/transforms.pkl', 'wb') as f:\n",
+    "    pickle.dump(transforms, f)eters = (0,0)\n",
     "        cumulative_parameters = [p + c for p, c in zip(previous_parameters, current_parameters)]\n",
     "        # Create a new translation transform with the cumulative parameters\n",
     "        cumulative_transform = sitk.TranslationTransform(fixed_image.GetDimension())\n",
